--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <script>
     // ✅ Replace these with your real values
     const apiKey = "AIzaSyBkX4XDW4TIueYjKQUlnIf-mgggoNrn6FU";  
-    const cx = "https://cse.google.com/cse.js?cx=7207aa6c10f27462e"; 
+    const cx = "7207aa6c10f27462e"; 
 
     let ads = [];
 
