--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
       background: #f9f9f9;
     }
   </style>
+  <meta charset="UTF-8">
+  <title>Mini Search 🔍</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="manifest" href="manifest.json">
+  <meta name="theme-color" content="#4A90E2">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <h1>Mini Search 🔍</h1>
