--- a/index.html
+++ b/index.html
@@ -102,6 +102,10 @@
         }
       }, 1000);
     }
-  </script>
+  if ('serviceWorker' in navigator) {
+    navigator.serviceWorker.register('/service-worker.js')
+      .then(() => console.log('Service Worker registered'));
+  }
+</script>
 </body>
 </html>
