--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
   <link rel="manifest" href="manifest.json">
   <meta name="theme-color" content="#4A90E2">
   <link rel="stylesheet" href="style.css">
+  <link rel="manifest" href="manifest.json">
 </head>
 <body>
   <h1>Mini Search 🔍</h1>
